--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,6 +3,7 @@
 @import 'fighterPreview.css';
 @import 'previewContainer.css';
 @import 'modal.css';
+@import 'info.css';
 
 html,
 body {
@@ -39,4 +40,8 @@ img {
   font-size: 18px;
   background: rgba(255, 255, 255, 0.7);
   visibility: hidden;
+}
+
+li {
+  list-style: none;
 }
